# composable-daa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  original-vision.md
benchmark_results/: BENCHMARK_FINDINGS.md  analyze_results.py  lmm_pipeline.yaml  nb_pipeline.yaml  null_bb_results.tsv  null_hurdle_results.tsv  null_linda_results.tsv  null_lmm_results.tsv  null_nb_results.tsv  null_permutation_results.tsv  null_zinb_results.tsv  zinb_pipeline.yaml
benchmark_results/confounded/: bb_results.tsv  config.yaml  counts.tsv  hurdle_results.tsv  linda_results.tsv  metadata.tsv
benchmark_results/extreme_sparse/: bb_results.tsv  config.yaml  counts.tsv  ground_truth.tsv  hurdle_results.tsv  linda_results.tsv  metadata.tsv
benchmark_results/group_specific/: bb_results.tsv  bb_results_fixed.tsv  config.yaml  counts.tsv  ground_truth.tsv  hurdle_results.tsv  linda_results.tsv  metadata.tsv
benchmark_results/lmm_null_data/: counts.tsv  metadata.tsv
examples/: basic_pipeline.rs
experiments/: 00-validation-plan.md  01-bv-compositional-analysis.md  02-spikein-load-estimation.md  03-compositional-artifact-audit.md  04-variance-estimation.md  05-linda-sensitivity.md  06-effect-size-recovery.md  07-library-size-confounding.md  07-scrna-generalization.md  08-hmp-gingival.md  08-mixed-model-validation.md  09-ibd-reanalysis.md  10-crc-meta-analysis.md  11-crc-real-meta.md  EXPERIMENT_SUMMARY.md  README.md  REPRODUCIBILITY_ATLAS.md  preliminary-results.md
experiments/atlas/: FRAMEWORK.md  (+4 more)
scripts/: generate_synthetic.py
src/: error.rs  lib.rs
tests/: linda_pipeline.rs
(+223 files in other folders)
